@@ -6,10 +6,10 @@
 # http://www.fsf.org/licensing/licenses/gpl.html
 
 [default]
-communityRead = public
-communityWrite = private
-communityTrap = public
-version = 1
+SNMPCommunityRead = public
+SNMPCommunityWrite = private
+SNMPCommunityTrap = public
+SNMPVersion = 1
 vlans = 1,2,3,4
 normalVlan = 1
 isolationVlan = 2
