@@ -152,6 +152,9 @@
           (http://www.packetfence.org/mantis/view.php?id=530)
         fixed default status/reports page
           (http://www.packetfence.org/mantis/view.php?id=532)
+        prefixed SNMP config variables in switches.conf with 
+          SNMP
+          (http://www.packetfence.org/mantis/view.php?id=537)
 
 1.7.6
         violations created through bin/pfdetect do not lead to 
